# code-hatchery

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  install.sh  pyproject.toml  uninstall.sh
app/: code-hatchery  code-hatchery-close-or-killactive  code-hatchery-gui-gtk.py  code-hatchery.cli  create-project.sh
app/templates/cpp/: bootstrap.sh
app/templates/csharp/: Program.cs  README.md  bootstrap.sh
app/templates/go/: bootstrap.sh  go.mod
app/templates/java/: README.md  pom.xml
app/templates/lua/: README.md
app/templates/node-ts/: eslint.config.js  package.json  tsconfig.json
app/templates/php/: composer.json  index.php
app/templates/python/: bootstrap.sh
app/templates/python-github-ready/: .gitignore  CODE_OF_CONDUCT.md  SECURITY.md  pyproject.toml
app/templates/rust/: README.md
docs/: hyprland.md
scripts/: code-hatchery  code-hatchery-close-or-killactive  code-hatchery-gui-gtk.py  code-hatchery.cli  create-project.sh
src/code_hatchery/: __init__.py  gui_gtk.py
templates/cpp/: CMakeLists.txt  README.md
templates/cpp/src/: main.cpp
templates/go/: README.md  main.go
templates/java/: bootstrap.sh
templates/lua/: .luarc.json  bootstrap.sh
templates/lua/src/: main.lua
templates/node-ts/: README.md  bootstrap.sh
templates/php/: README.md  bootstrap.sh
templates/php/src/: Main.php
templates/php/tests/: SmokeTest.php
templates/python/: README.md
templates/python-github-ready/: CONTRIBUTING.md  README.md
templates/rust/: bootstrap.sh
tests/: test_repo_layout.py
(+4 files in other folders)
